# wa-rs

./: AGENTS.md  Cargo.toml  README.md
examples/: benchmark.rs
http_clients/ureq-client/: Cargo.toml
http_clients/ureq-client/src/: lib.rs
src/: appstate_sync.rs  bot.rs  client.rs  download.rs  handshake.rs  history_sync.rs  http.rs  jid_utils.rs  keepalive.rs  lib.rs  lid_pn_cache.rs  main.rs  mediaconn.rs  message.rs  pair.rs  pair_code.rs  pdo.rs  prekeys.rs  receipt.rs  request.rs  retry.rs  send.rs  session.rs  spam_report.rs  sync_task.rs  transport.rs  unified_session.rs  upload.rs  usync.rs  version.rs
src/client/: context_impl.rs  device_registry.rs  lid_pn.rs  sender_keys.rs  sessions.rs
src/features/: blocking.rs  chatstate.rs  contacts.rs  groups.rs  mex.rs  presence.rs  tctoken.rs
src/handlers/: basic.rs  chatstate.rs  ib.rs  iq.rs  message.rs  notification.rs  receipt.rs  router.rs  traits.rs  unimplemented.rs
src/socket/: noise_socket.rs
src/store/: commands.rs  error.rs  mod.rs  persistence_manager.rs  signal.rs  signal_adapter.rs  traits.rs
src/types/: enc_handler.rs  mod.rs
storages/sqlite-storage/: Cargo.toml
transports/tokio-transport/: Cargo.toml
wacore/: Cargo.toml
wacore/appstate/: Cargo.toml
wacore/appstate/src/: decode.rs  hash.rs  patch_decode.rs  processor.rs
wacore/benches/: reporting_token_benchmark.rs
wacore/binary/: Cargo.toml
wacore/derive/: Cargo.toml
wacore/libsignal/: Cargo.toml
wacore/noise/: Cargo.toml
wacore/src/: download.rs  history_sync.rs  ib.rs  lib.rs  messages.rs  pair.rs  pair_code.rs  prekeys.rs  proto_helpers.rs  protocol.rs  reporting_token.rs  request.rs  send.rs  usync.rs  xml.rs
wacore/tests/: appstate_external_mutations_test.rs  appstate_mac_test.rs  binary_protocol_test.rs  jid_test.rs  noise_handshake_test.rs
waproto/: Cargo.toml  build.rs
waproto/src/: lib.rs
(+47 files in other folders)
