[package]
name = "wa-rs-proto"
version = "0.2.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/homunbot/wa-rs"
description = "Protocol Buffers definitions for WhatsApp"

[dependencies]
prost = { workspace = true, features = ["derive"] }
serde = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
