[package]
name = "wa-rs-appstate"
version = "0.2.0"
edition = "2024"
authors = ["João Lucas <jlucaso@hotmail.com>"]
license = "MIT"
repository = "https://github.com/homunbot/wa-rs"
description = "Appstate for WhatsApp protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
hex = { workspace = true }
hkdf = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
serde_json = { workspace = true, features = ["alloc"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
wa-rs-binary = { workspace = true, features = ["serde"] }
wa-rs-libsignal = { workspace = true }
wa-rs-proto = { workspace = true }

[dev-dependencies]
